--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
